--- a/pages/index.html
+++ b/pages/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenvolvimento Web - Cibersegurança</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
         
     </style>
-</head>>
+</head>
 <header id="header">
     <div class="container">
         <div class="flex">
-            <img class="logotipo-imagem" src="logo_site.png" alt="Logotipo do site.">
+            <img class="logotipo-imagem" src="../img/logo_site.png" alt="Logotipo do site.">
             <nav class="itens-do-menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Filmes</a></li>
-                    <li><a href="#">Locação</a></li>
-                    <li><a href="#">Funcionários</a></li>
-                    <li><a href="index.php" class="btn-login-menu">Entrar</a></li>
+                    <li><a href="../pages/home.php">Home</a></li>
+                    <li><a href="../pages/locadora.php">Filmes</a></li>
+                    <li><a href="../pages/locadora.php">Locação</a></li>
+                    <li><a href="../pages/funcionarios.php">Funcionários</a></li>
+                    <li><a href="../pages/index.php" class="btn-login-menu">Entrar</a></li>
                 </ul>
             </nav>
             <div class="barra-de-busca">
@@ -39,65 +39,62 @@
     </div>
 </header>
 <body>
-    <section class="banner">
-        <h1></h1>    
-    </section>
-    
+    <section style="background-image: url(../img/download5.jpg);" class="banner"> </section>
     <section class="filmes">
         <h2>Destaques</h2>
         <div class="filmes-container" id="carrossel">
             <div class="card-filme">
-                <img class="img-poster" src="poster-1.jpg" alt="">
+                <img class="img-poster" src="../img/poster-1.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-2.jpg" alt="">
+                <img class="img-poster" src="../img/poster-2.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-3.jpg" alt="">
+                <img class="img-poster" src="../img/poster-3.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="./img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
             <div class="card-filme">
-                <img class="img-poster" src="poster-4.jpg" alt="">
+                <img class="img-poster" src="../img/poster-4.jpg" alt="">
                 <h3>Nome do filme</h3>
                 <p>Descrição simples do filme...</p>
             </div>
@@ -173,6 +170,6 @@
             <p>📱 Redes sociais</p>
         </div>
     </footer>
-<script src="main.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
